# src/core/types/login.type.ts
@@ -1,0 +1,6 @@
+export type LoginT = {
+  id: string;
+  email: string;
+  password: string;
+  jwt?: string;
+};
