# src/core/types/user.type.ts
@@ -1,0 +1,6 @@
+export type UserT = {
+  id: string;
+  firstName: string;
+  lastName?: string;
+  profilePic?: string;
+};
