# src/public/open-api-spec.json
@@ -11,7 +11,7 @@
   },
   "servers": [
     {
-      "url": "http://localhost:8080/v1/api",
+      "url": "http://localhost:8080/v1",
       "description": "Development server"
     }
   ],
@@ -593,12 +593,7 @@
           "500": {
             "description": "Server error"
           }
-        },
-        "security": [
-          {
-            "BearerAuth": []
-          }
-        ]
+        }
       },
       "get": {
         "summary": "Retrieve all users",
@@ -651,6 +646,89 @@
                 }
               }
             }
+          },
+          "500": {
+            "description": "Server error"
+          }
+        },
+        "security": [
+          {
+            "BearerAuth": []
+          }
+        ]
+      }
+    },
+    "/admins": {
+      "post": {
+        "summary": "Create a new admin",
+        "description": "Creates a new admin in the system.",
+        "tags": [
+          "users"
+        ],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "required": [
+                  "firstName",
+                  "lastName",
+                  "profilePic",
+                  "email",
+                  "password"
+                ],
+                "properties": {
+                  "firstName": {
+                    "type": "string",
+                    "description": "The user's first name.",
+                    "example": "John"
+                  },
+                  "lastName": {
+                    "type": "string",
+                    "description": "The user's last name.",
+                    "example": "Doe"
+                  },
+                  "profilePic": {
+                    "type": "string",
+                    "description": "URL to the user's profile picture.",
+                    "example": "http://example.com/profile.jpg"
+                  },
+                  "email": {
+                    "type": "string",
+                    "description": "The user's email.",
+                    "example": "user@example.com"
+                  },
+                  "password": {
+                    "type": "string",
+                    "description": "The user's password.",
+                    "example": "password123"
+                  }
+                }
+              }
+            }
+          }
+        },
+        "responses": {
+          "201": {
+            "description": "User created successfully",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "id": {
+                      "type": "string",
+                      "description": "The ID of the newly created user.",
+                      "example": "123e4567-e89b-12d3-a456-4266-9c88-29676616ae26e"
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Bad request"
           },
           "500": {
             "description": "Server error"
